Updating my profile html file with my project work

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <ul>
         <li><a href="https://example.com/my-drawing" target="_blank">My Favourite Drawing</a></li>
         <li><a href="https://example.com/my-code" target="_blank">Cool Code Project</a></li>
-        <li><a href="https://example.com/my-research" target="_blank">Fun Research I Did</a></li>
+        <li><a href="https://example.com/my-research" target="_blank">Small projects using HTML, CSS and Javascript</a></li>
       </ul>
     </div>
 
